namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices-demo
  labels:
    name: microservices-demo
    istio-injection: enabled
    argocd.argoproj.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
