autoscaler-deployment.yaml
# autoscaler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservice-autoscaler
  namespace: microservices-demo
  labels:
    app: microservice-autoscaler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice-autoscaler
  template:
    metadata:
      labels:
        app: microservice-autoscaler
    spec:
      serviceAccountName: autoscaler-service-account
      containers:
      - name: autoscaler
        image: harshareddy2024/autoscaler:latest
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
