eurekha-server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: microservices-demo
  labels:
    app: eureka-server
    version: v1
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-server
      version: v1
  template:
    metadata:
      labels:
        app: eureka-server
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8761"
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: eureka-server
          image: harshareddy2024/eurekha-server:latest
          ports:
            - containerPort: 8761
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 45
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3
