service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: microservices-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app: eureka-server
    version: v1
  ports:
    - name: http-eureka
      protocol: TCP
      port: 8761
      targetPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: microservices-demo
  labels:
    app: admin-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app: admin-service
    version: v1
  ports:
    - name: http-admin
      protocol: TCP
      port: 4001
      targetPort: 4001

---
apiVersion: v1
kind: Service
metadata:
  name: student-service
  namespace: microservices-demo
  labels:
    app: student-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app: student-service
    version: v1
  ports:
    - name: http-student
      protocol: TCP
      port: 4003
      targetPort: 4003

---
apiVersion: v1
kind: Service
metadata:
  name: faculty-service
  namespace: microservices-demo
  labels:
    app: faculty-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: ClusterIP
  selector:
    app: faculty-service
    version: v1
  ports:
    - name: http-faculty
      protocol: TCP
      port: 4002
      targetPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservices-demo
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: LoadBalancer
  selector:
    app: api-gateway
    version: v1
  ports:
    - name: http-apigateway
      protocol: TCP
      port: 4000
      targetPort: 4000
